Last card size fix and spacing

--- a/src/Styles/TestimonialCard.css
+++ b/src/Styles/TestimonialCard.css
@@ -17,7 +17,7 @@
     font-family: 'Montserrat', sans-serif;
     font-weight: 300;
     font-size: 1.45rem;
-    /*margin-bottom: 450px;*/
+    margin-bottom: 30vh;
 }
 
 .testimonial h3 {
@@ -32,7 +32,7 @@
 .testimonials-heading {
     text-align: center;
     font-family: 'Montserrat', sans-serif;
-    /*padding-top: 30px;*/
+    margin-top: 30vh;
 }
 
 .testimonials-heading h2 {
@@ -69,4 +69,8 @@
     .testimonial h3 {
         font-size: 1.1rem;
     }
+}
+.testimonial-hidden{
+    visibility: hidden;
+    opacity:0;
 }
